--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  {% comment %} <script src="https://unpkg.com/vue@3"></script> {% endcomment %}
+  <!-- <script src="https://unpkg.com/vue@3"></script> -->
   
   <script type="importmap">
     {
@@ -42,7 +42,7 @@
   </script>
   
 
-  {% comment %} <div id="app">{{ message }}</div> {% endcomment %}
+  <!-- <div id="app">{{ message }}</div> -->
 
 
   <!-- Add your site or application content here -->
@@ -50,7 +50,7 @@
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
-  {% comment %} <script src="js/main.js"></script> {% endcomment %}
+  <!-- <script src="js/main.js"></script> -->
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
