--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     createApp(MyComponent).mount('#app')
   </script>
   
+  <div id="app"><div>
 
   <!-- <div id="app">{{ message }}</div> -->
 
